@@ -41,12 +41,12 @@ public class AuthorizationServerConfig {
 //        http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.NEVER);
         return http.cors().configurationSource(request -> {
                     CorsConfiguration corsConfiguration = new CorsConfiguration();
-                    //corsConfiguration.setAllowedOrigins(List.of("127.0.0.1:19006")); //TODO set this later
+                    corsConfiguration.setAllowedOrigins(Arrays.asList("127.0.0.1:19006")); //TODO set this later
                     corsConfiguration.setAllowCredentials(true);
                     corsConfiguration.setAllowedMethods(Arrays.asList(HttpMethod.GET.name(), HttpMethod.HEAD.name(), HttpMethod.POST.name(), HttpMethod.OPTIONS.name()));
-                    corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+                    //corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
                     corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
-                    corsConfiguration.applyPermitDefaultValues();
+                    //corsConfiguration.applyPermitDefaultValues();
                     return corsConfiguration;
                 }).and()
                 .formLogin(Customizer.withDefaults()).build();
